Fixed dit logo getting pushed down by account links on smaller screens

--- a/export_elements/sass/components/header-footer/_menu.scss
+++ b/export_elements/sass/components/header-footer/_menu.scss
@@ -247,7 +247,7 @@
     width: 104px;
     height: 50px;
     text-align: left;
-    background-color: transparent;
+    background-color: $great-blue;
     border: 2px solid $white;
     border-radius: 0;
     color: $white;
